adjustments to paper & report

--- a/paper/figure.tex
+++ b/paper/figure.tex
@@ -1,5 +1,6 @@
 \begin{figure}[H]
     \centering
+    \scalebox{0.75}{
     \begin{tikzpicture}
         \definecolor{lightgrey}{RGB}{232,232,232}
         \definecolor{darkblue}{RGB}{0,0,204}
@@ -29,7 +30,7 @@
           \node at (-6, 1.25) {Compute clusters using};
           \node at (-6, 0.75) {agglomerative clustering};
          
-    \end{tikzpicture}
+    \end{tikzpicture}}
     \caption{Overview of our clustering pipeline.}
     \label{fig:pipeline}
 \end{figure}
