--- a/report/report.tex
+++ b/report/report.tex
@@ -30,7 +30,7 @@
 
 \begin{document}
 
-\title{Towards Language Model-based Identification of Market Segments and Fostering of Business Clusters}
+\title{Towards Language Model-based Identification of Business Clusters}
 
 \author{\IEEEauthorblockN{1\textsuperscript{th} Müller Nicola}
 \IEEEauthorblockA{s8namuel@stud.uni-saarland.de \\ 2578753}
@@ -51,11 +51,12 @@
 \maketitle
 
 \begin{abstract}
-	Identifying market segments is crucial for effective marketing strategies and well-informed business decisions. Further, combining companies' geographical locations with their market segments allows for detecting business clusters. However, acquiring and processing the data needed to gain such insights into regional economies is labor-intensive. 
+	One of the most important decisions every business has to decide on a physical location. Identifying the right location is crucial for effective marketing strategies reaching the intended customer base, it can reduce transportation costs, and locating in a vibrant regional business clusters can have significant positive effects on business development.
+	However, strategically acquiring \& analyzing data on regional economies, the corresponding companies along with their target market segments is very complex and labor-intensive. 
+
+	We propose to circumvent these challenges by leveraging state-of-the-art language models to transform publicly available company websites, into machine-readable data points and  applying clustering to make location recommendations for novel.
 	
-	We propose to circumvent these challenges by leveraging state-of-the-art language models to transform companies' highly informative public text data into machine-readable data points and then applying clustering to identify market segments and make location recommendations for novel companies to support business cluster development. 
-	
-	A qualitative evaluation of our methods being applied to data from the German municipality Saarland demonstrates that our methods can accurately cluster similar companies and assign novel companies to clusters.
+	A qualitative evaluation of our methods being applied to data from the German municipality Saarland demonstrates that our methods can accurately cluster related companies and categorize novel companies to a cluster.
 \end{abstract}
 
 
