--- a/report/report.tex
+++ b/report/report.tex
@@ -51,12 +51,12 @@
 \maketitle
 
 \begin{abstract}
-	One of the most important decisions every business has to decide on a physical location. Identifying the right location is crucial for effective marketing strategies reaching the intended customer base, it can reduce transportation costs, and locating in a vibrant regional business clusters can have significant positive effects on business development.
-	However, strategically acquiring \& analyzing data on regional economies, the corresponding companies along with their target market segments is very complex and labor-intensive. 
-
-	We propose to circumvent these challenges by leveraging state-of-the-art language models to transform publicly available company websites, into machine-readable data points and  applying clustering to make location recommendations for novel.
+	One of the most important decisions every business has to decide on is a physical location. Identifying the right location is crucial for effective marketing strategies to reach the intended customer base. It can also reduce transportation costs, and locating in a vibrant regional business cluster can significantly positively affect business development.
+	However, strategically acquiring \& analyzing data on regional economies, the affiliated companies, and their target market segments is very complex and labor-intensive. 
 	
-	A qualitative evaluation of our methods being applied to data from the German municipality Saarland demonstrates that our methods can accurately cluster related companies and categorize novel companies to a cluster.
+	We propose to circumvent these challenges by leveraging state-of-the-art language models to transform publicly available company websites into machine-readable data points and applying clustering to make location recommendations for novel companies.
+	
+	A qualitative evaluation of our methods being applied to data from the German municipality Saarland demonstrates that our methods can accurately cluster related companies and categorize novel companies into existing clusters.
 \end{abstract}
 
 
@@ -82,7 +82,7 @@ $2)$ Given the company descriptions, we utilize state-of-the-art language models
 
 $3)$ We further reduce the dimensionality of the embeddings using non-linear dimensionality reduction techniques, which enables us to preserve the non-linear relationships between the embedded text data while avoiding the curse of dimensionality. 
 
-$4)$ Lastly, we apply well-established clustering algorithms in the low-dimensional feature space to assign each company to a cluster from which a potential market segment can be inferred.
+$4)$ Lastly, we apply well-established clustering algorithms in the low-dimensional feature space to assign each company to a cluster from which a potential market segments can be inferred.
 
 Our location recommendation system builds upon the clustering pipeline by computing an embedding of a novel company's description, assigning it to a cluster, and then identifying the most similar companies within the cluster. The system then recommends that the novel company locate its site near an established company acting in the same market segment, which fosters business cluster development in Saarland.
 
