--- a/report/report.tex
+++ b/report/report.tex
@@ -285,11 +285,12 @@ To this end, we have demonstrated the feasibility and potential of applying lang
 
 \newpage
 \appendix
-\nm{Upload all \LaTeX{} files to overleaf when its done since they want a link!}
+
 \subsection{Link to Code}
 \url{https://github.com/nicola-mueller/LM-based_Company_Clustering}
 
 \subsection{Link to Overleaf}
+\url{https://www.overleaf.com/read/svfsgrbmvndb}
 
 
 \subsection{Companies in our Dataset}
