refactor: paper to more detailed template

--- a/paper/wits_template.tex
+++ b/paper/wits_template.tex
@@ -8,3 +8,17 @@
 
 %pages
 \usepackage[paperheight=11in,paperwidth=8.5in,margin=1in]{geometry}
+
+%set footnotes
+\usepackage{fancyhdr}
+
+%custom font size
+\usepackage{anyfontsize}
+
+%custom section fonts
+\usepackage{sectsty}
+\sectionfont{\fontsize{13}{13}\bfseries\selectfont}
+\subsectionfont{\fontsize{12}{12}\bfseries\itshape\selectfont}
+\subsubsectionfont{\fontsize{12}{12}\bfseries\itshape\selectfont}
+
+
