--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -23,14 +23,31 @@
 
 
 
+
+
+
 \author{\small \href{mailto:s8namuel@stud.uni-saarland.de}{Nicola J. Müller}, \href{s8roleis@stud.uni-saarland.de}{Robert Leist}, \href{mailto:s8pleich@uni-saarland.de}{Paul Eichler}, and \href{mailto:s8tsreck@stud.uni-saarland.de}{Tobias Recktenwald}}
 \title{\vspace{-3cm}Towards Language Model-based Identification of Business Clusters}
 \date{}
 
 
 \begin{document}
-	
-    \maketitle
+	\pagestyle{fancy}
+
+	\fancyfoot{} % clear all footer fields
+	\fancyfoot[l]{\fontsize{9}{9} \textit{Workshop on Information Technology and Systems, Hyderabad, India 2023}}
+	\fancyfoot[r]{\thepage}
+
+	\renewcommand{\headrulewidth}{0pt}
+	\fancyhead{} % clear all headers
+	\fancyhead[r]{\fontsize{9}{9} \textit{WITS 2023 - Towards Language Model-based Identification of Business Clusters}}
+
+	%custom title
+    \begin{center}
+		{\fontsize{20}{20} \textbf{Towards Language Model-based Identification of Business Clusters}}\\
+		\vspace*{0.2cm}
+		\textit{Submission Type: Research in Progress}
+	\end{center}
 
    \begin{abstract}
 	
@@ -43,7 +60,7 @@
    \end{abstract}
    
    
-   \section{Introduction}
+   \section*{Introduction}
    Deciding on the location of a business is a vital strategic decision: First, most businesses must be located close to their customers and suppliers for more effective marketing or reduced transportation costs. Secondly, being located in an active regional cluster can significantly benefit business growth \cite{clustersandcomp,gems-model, regionaladv, clustertheory}. 
    
    Business clusters are local concentrations of companies, manufacturers, suppliers, and institutions from the same field. Identifying clusters combines geographical data of companies' locations with information on their corresponding market segments. This proximity of related companies enables efficient cooperation and knowledge transfer, which has been shown to significantly increase the productivity of all companies within the cluster \cite{clustersandcomp,gems-model, regionaladv, clustertheory}. Thus, establishing or further developing business clusters is of high interest to companies and local governments. Therefore, significant effort is spent identifying clusters in regional economies. 
@@ -65,7 +82,7 @@
    	\item Demonstrating our approach's feasibility using Saarland's economy and providing a user-friendly graphical interface.
    \end{itemize}
    
-   \section{Related Work}
+   \section*{Related Work}
    This section will examine previous work on business clusters and recent advances in natural language processing.
    
    Business clusters and their advantages have been studied in many works. For example, \cite{regionaladv} examined the well-known technology cluster in Silicon Valley, famous for being the home of many innovative start-ups. 
@@ -77,7 +94,7 @@
    In natural language processing (NLP), translating text data to machine-processable representations is a fundamental challenge for numerous tasks, such as sentiment analysis~\cite{rezaeinia2019sentiment}, and information retrieval~\cite{ye2016word}, due to the complexity and variability of natural language. A popular approach for representing text data is the utilization of so-called \emph{embeddings}: vectorized representations of text with the property that vectors of text data with similar semantic and syntactic properties will have a smaller distance to vectors of text data with different properties, making them ideal for applying clustering to our sparse dataset of high-dimensional company descriptions.  
    Mikolov et al~\cite{mikolov2013efficient}. popularized learning word embeddings from raw text data in $2013$ by introducing their Word2Vec model. More recently, transformer-based models like BERT, developed by Devlin et al.~\cite{devlin2018bert}, and GPT models by OpenAI~\cite{radford2018improving, chatgpt} have leveraged context-dependent word embeddings by encoding the words themselves and the context in which they are used. So-called sentence transformers extended these approaches by computing embeddings for entire sentences to capture more contextual information than individual word embeddings. Reimers and Gurevych~\cite{reimers2019sentence} introduced the Sentence-BERT model, capable of generating high-quality sentence embeddings using only a fraction of the original BERT model's computational effort.
    
-   \section{Procedure}
+   \section*{Procedure}
    \input{figure}
    Our goal is to collect data points on companies in the region of interest and cluster them to identify market segments and recommend locations for companies who plan to establish new sites, such that it supports the development of business clusters. We will present our clustering pipeline and then examine how we can use the results to provide location recommendations. 
    
@@ -91,10 +108,9 @@
    
    \textit{$3)$ Projection into 2D Space:} The embeddings' number of features might be too large relative to the size of the dataset, potentially invoking the curse of dimensionality~\cite{koppen2000curse}. Further, clustering data in high-dimensional space prevents visualizing the results. Hence, we project the embeddings to 2D space. To do so, we apply the \emph{t-distributed stochastic neighbor embedding} (t-SNE) technique, which computes a probability distribution representing the pairwise similarity between data points in the feature space and then projects the data points to a low-dimensional space according to a second probability distribution that minimizes the Kullback-Leibler divergence to the first distribution. This enables t-SNE to accurately preserve local structures in the data, making it suitable for identifying clusters.
    
-   \textit{$4)$ Clustering:} We cluster the data using agglomerative clustering, which initially assigns each data point to a separate cluster and then iteratively merges close clusters until all data points are in the same cluster. The intermediate clustering that achieves the largest separation between data points is chosen as the final clustering.
-   Once the algorithm converges, we receive cluster labels for each company in our dataset, allowing us to infer market segments.
+   \textit{$4)$ Clustering:} We cluster the data using agglomerative clustering, which initially assigns each data point to a separate cluster, then iteratively merges close clusters until all are in the same cluster. The intermediate clustering that achieves the largest separation between data points is chosen as the final clustering. Once the algorithm converges, we receive cluster labels for each company in our dataset.
    
-   Although our general pipeline represents companies using their descriptions, we emphasize that our approach can also utilize additional features. For instance, we can include the companies' products in the encoding by computing the corresponding sentence embeddings and merging them with the description embedding using max pooling.
+   Although our general pipeline represents companies using their descriptions, we emphasize that it can also utilize additional features. For instance, we can include the companies' products in the encoding by computing the corresponding sentence embeddings and merging them with the description embedding using max pooling.
    
    Figure \ref{fig:clustering-analysis} depicts the clustering analysis tab of our user-interface. On the left side, users can define how the description embeddings are computed, the technique and target dimensionality of the dimensionality reduction, and the number of clusters. Additionally, users can specify a subset of additional features, including industry, products, customer base, market positioning, and revenue, which will be combined with the descriptions. After clicking "Compute clustering", the clustered data points are shown on the right side. Further, users can see the location and clustering assignment of all companies in the given dataset on a map. When hovering the mouse over a company's data point, additional information about the company is shown.
    
@@ -115,15 +131,15 @@
    	\end{subfigure}
    \end{figure}
    
-   %\subsection{Fostering Business Clusters through Location Recommendations}
+   \subsection*{Fostering Business Clusters through Location Recommendations}
    To give location recommendations for companies seeking to establish new sites in the region of interest, we utilize parts of our clustering pipeline. Given the novel company's description, we compute an embedding and apply dimensionality reduction. We then assign the data point to a cluster and compute which company within the cluster is most similar to the novel company.
-   Given the novel company's cluster label, the location recommendation is to establish a new site nearby the most similar company within the cluster. Thus, our location recommendations support the geographical concentration of companies acting in the same market segment, which helps to foster business clusters.
+   Given the novel company's cluster label, the location recommendation is to establish a new site nearby the most similar company within the cluster. Thus, our location recommendations support the geographical concentration of companies acting in the same cluster, encouraging their growth.
    
    Our user-interface offers a dedicated tab for location recommendations. Users can provide their company's name and description in text boxes. Additionally, they can specify their company's industry, products, customer base, market position, and revenue. After clicking "Submit", users are shown the output depicted in figure \ref{fig:location-recommendation-output}. The table at the top shows the names and features of the companies in the cluster to which the user's company was assigned. The scatter plot at the bottom left shows the clustered data points, where the point of the user's company is highlighted. Lastly, the map at the bottom right displays the location of the novel company's cluster members and the distances between them. The user can also overlay a heatmap that shows the similarity between his company and all other companies in the dataset.
    
-   \section{Results}
+   \section*{Results}
    To build a dataset of company descriptions, we extracted the descriptions of $50$ of the largest companies in Saarland, which are listed in the appendix \ref{sec:appendix-companies}.
-   For the experimental evaluation, we conducted the data collection manually. However, in the future, we aim to create an HTML scraper to scale our approach to larger regions. To test our location recommendation feature, we created company descriptions using GPT-4 \cite{chatgpt}.
+   For the experimental evaluation, the data was collected manually. However, in the future, we aim to create an automated scraper to tackle larger regions. To test our location recommendation feature, we created company descriptions using GPT-4 \cite{chatgpt}.
    Additionally, we evaluate the impact of providing additional features to the clustering pipeline, for which we also gathered the features industry, products, customer base, market positioning, and revenue of each company. 
    We utilize the popular pre-trained sentence transformer model "all-MiniLM-L6-v2"~\cite{sentence-transformer-model} to compute sentence embeddings for each description.  
    
@@ -136,36 +152,34 @@
    
    We will now investigate the results of our clustering and location recommendation system. Besides the company descriptions, we used the companies' industry as an additional feature since this yielded the most concise clustering. Figure \ref{fig:t-sne-agglomerative} displays the resulting clustered data points.
    To evaluate  the clustering of our pipeline, we will compare the found clusters to those identified in \cite{saarlandeco2} (Table 4, p. 1226):
-   \textit{Coal and mining industries}: With the decline of coal mining in recent years, there are no more coal mines in Saarland. Accordingly, no such companies are present in our dataset.    
+   \textit{Coal and mining industries}: With the decline of coal mining in recent years, there are no more coal mines in Saarland, therefore no companies are present in our dataset.    
    \textit{Metal industry}: Covered by cluster 1 (light green) and cluster 6 (yellow), which contain steel producers like SaarStahl and Dillinger and companies offering steel products like Hörmann, a producer of various types of doors.    
    \textit{Automobile industry}: Saarland's large automobile market segment is covered by cluster 0 (red), including companies like Ford, ZF, and Michelin.    
    \textit{Energy}: Cluster 5 (light blue) comprises the energy provider energis and the energy service providers Iqony Energies and Greencells, representing the energy market segment.    
    \textit{Information and communication technology}: The IT products and IT consulting market segment, to which companies like SAP, ORBIS, and eurodata belong, is covered by cluster 3 (beige).    
    \textit{Biotechnology and nanotechnology}: Covered by cluster 2 (dark blue), with members such as Fresenius, which produces dialysis machines, and USRAPHAM, which manufactures medicine.        
-   One can see that the results of our pipeline agree with the general sectors identified by \cite{saarlandeco2}. However, our approach did lead to more fine-grained separation. Additionally, we identified sectors not covered in their work, such as cluster 7 (orange), which represents the construction work market segment, and cluster 10 (pink), which represents the food production market segment.
+   One can see that the results of our pipeline agree with the general sectors identified by \cite{saarlandeco2}. However, our approach did lead to more fine-grained separation. Additionally, we identified sectors not covered in their work, such as cluster 7 (orange), which represents the construction work market segment, and cluster 10 (pink), which represents the food production market segment, both not as influential in the regions economy.
    
    To test our location recommendation system, we generated descriptions for three fictional German companies with vastly different characteristics:
    \textit{FluxAI}: A young artificial intelligence start-up with ambitious goals of revolutionizing healthcare, finance, energy, and transportation.    
    \textit{ABC Auto}: A well-established automotive manufacturer offering a wide range of cars focusing on sustainability.    
    \textit{PanzerTech}: A weapons manufacturer with a wide spectrum of products, from armored vehicles to cybersecurity solutions.       
-   For FluxAI, our system recommends placing the new site close to CISPA, which is sensible since CISPA is a world leader in information security research, including artificial intelligence, and thus knowledge transfer between both companies could be highly beneficial. 
+   For FluxAI, our system recommends placing the new site close to CISPA, which is sensible since CISPA is a leader in information security research, including artificial intelligence, and thus knowledge transfer between both companies could be highly beneficial. 
    For ABC Auto, the location recommendation is to establish a new site close to VOIT, which specializes in manufacturing car components with a focus on hybrid and electric cars. Thus, placing ABC Auto near VOIT would allow ABC Auto to source parts for its hybrid and electric cars from a company nearby, leading to a more robust supply chain.
    Lastly, our system recommends placing PanzerTech's new site close to Diehl Defence, corresponding to the only weapons manufacturer in our dataset. Hence, this shows that our system does not need many samples from each market segment to give reasonable location recommendations.   
    We conclude that our location recommendation system can reliably identify companies in our dataset with similar characteristics to companies seeking to establish sites in Saarland and thus can be used to foster the development of business clusters.
    
-   \section{Conclusion}
+   \section*{Conclusion}
    In this work, we demonstrated how language models and clustering algorithms could be combined to identify market segments and give location recommendations for novel companies such that business clusters are fostered.
    
-   We represented companies by their public descriptions, which allowed us to leverage state-of-the-art language models to transform the highly informative text data into embeddings. Further, our methods enabled straightforwardly including other company attributes. Given the embeddings, we applied a clustering algorithm to infer potential market segments.
-   To make location recommendations, we passed the descriptions and features of novel companies to our clustering pipeline and recommended establishing new sites next to the most similar companies in our dataset.
+   We represented companies by their public descriptions, which allowed us to leverage state-of-the-art language models to transform the highly informative text data into embeddings. Given the embeddings, we applied a clustering algorithm to infer related companies, which enables us to make location recommendation. A qualitative evaluation of our methods has shown that they can reliably cluster similar companies, which allowed us to infer clusters in Saarland. Further, our location recommendation system demonstrated its capability of identifying similar companies, given the description of a new company. To allow end-users to leverage our methods, we implemented a user-friendly interface with many functionalities, such as visualizing the identified clusters and location recommendations.
    
-   A qualitative evaluation of our methods has shown that they can reliably cluster similar companies, which allowed us to infer market segments in Saarland. Further, our location recommendation system demonstrated its capability of identifying similar companies, given the description of a new company. To allow end-users to leverage our methods, we implemented a user-friendly interface with many functionalities, such as visualizing the clustered data points, showing the location of companies, and giving detailed and interpretable location recommendations.
-   
-   A promising opportunity for future work would be fine-tuning our language models using text data from the business sector since it might lead to more expressive embeddings. To achieve this efficiently, an automated aggregation system could be developed. As we rely on public websites, such a system could be easily implemented without relying on 3rd party services.
+   A promising opportunity for future work would be fine-tuning our language models using text data from particular business sectors. To achieve this efficiently, an automated aggregation system could be developed, along with optimizations to the clustering pipeline.
 
     
-    \bibliographystyle{IEEEtran}
+    \bibliographystyle{misq}
 	\bibliography{bibliography}
+	
 	
 	\newpage
 	\section{Appendix}
