--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -135,7 +135,7 @@
    To give location recommendations for companies seeking to establish new sites in the region of interest, we utilize parts of our clustering pipeline. Given the novel company's description, we compute an embedding and apply dimensionality reduction. We then assign the data point to a cluster and compute which company within the cluster is most similar to the novel company.
    Given the novel company's cluster label, the location recommendation is to establish a new site nearby the most similar company within the cluster. Thus, our location recommendations support the geographical concentration of companies acting in the same cluster, encouraging their growth.
    
-   Our user-interface offers a dedicated tab for location recommendations. Users can provide their company's name and description in text boxes. Additionally, they can specify their company's industry, products, customer base, market position, and revenue. After clicking "Submit", users are shown the output depicted in figure \ref{fig:location-recommendation-output}. The table at the top shows the names and features of the companies in the cluster to which the user's company was assigned. The scatter plot at the bottom left shows the clustered data points, where the point of the user's company is highlighted. Lastly, the map at the bottom right displays the location of the novel company's cluster members and the distances between them. The user can also overlay a heatmap that shows the similarity between his company and all other companies in the dataset.
+   Our user-interface offers a dedicated tab for location recommendations. Users can provide their company's name and description in text boxes. Additionally, they can specify their company's industry, products, customer base, market position, and revenue. After clicking "Submit", users are shown the output depicted in figure \ref{fig:location-recommendation-output}. The table at the top shows the names and features of the companies in the cluster to which the user's company was assigned. The scatter plot at the bottom left shows the clustered data points, where the point of the user's company is highlighted. Lastly, the map at the bottom right displays the location of the novel company's cluster members and the distances between them. The user can also overlay a heatmap that shows the similarity between their company and all other companies in the dataset.
    
    \section*{Results}
    To build a dataset of company descriptions, we extracted the descriptions of $50$ of the largest companies in Saarland, which are listed in the appendix \ref{sec:appendix-companies}.
